# forecasting-agent

./: README.md  pyproject.toml
data/forecasts/: historical_nba_market_baseline_v1.csv  llm_v1_478c0a0e-d129-454e-91c3-81be088410d2_20251202T204157Z.jsonl  llm_v1_f799ff95-ff62-4b3e-96c1-e6a52aa7204f_20251203T154013Z.jsonl  market_baseline_v1_03e7a14a-bcdf-416f-9fac-3319b60efd06_20251202T231544Z.jsonl  market_baseline_v1_080e68c3-ca95-4a7b-8599-6056dfc894a5_20251202T230613Z.jsonl  market_baseline_v1_134a3185-ea58-477a-9ae8-aa74b44ae107_20251203T153210Z.jsonl  market_baseline_v1_20c5d154-ab70-43cb-a3f5-5efc849a5531_20251203T174049Z.jsonl  market_baseline_v1_48a3086d-b78e-419c-af7d-267c50d1d99e_20251203T000828Z.jsonl  market_baseline_v1_4a5f641d-a931-42e0-9f1c-0499b5970ce3_20251203T154835Z.jsonl  market_baseline_v1_61d0105b-c780-4837-b4f1-3c097f954abf_20251203T000242Z.jsonl  market_baseline_v1_66228099-c31d-4cd7-b78a-e287b1d9b021_20251203T151251Z.jsonl  market_baseline_v1_a97e9597-4cb8-45c1-adda-b0cde7f545d3_20251203T182102Z.jsonl  market_baseline_v1_bc06681a-1bbc-4ec8-b267-5e5917f1acd4_20251202T231608Z.jsonl  market_baseline_v1_c1fc7f06-bb50-46cf-ac34-f197d951ced7_20251202T230419Z.jsonl  (+2 more)
scripts/: fit_calibrator.py  run_backtest.py  run_experiments.py  run_forecastbench.py  run_historical_sports_backtest.py
src/forecasting/: __init__.py  config.py  models.py
tests/: __init__.py  test_backtest_caching.py  test_calibration.py  test_fake_feed.py  test_llm_forecaster.py  test_metrics.py  test_multi_agent.py  test_sports_odds.py  test_storage.py  test_trading.py
(+1051 files in other folders)
