[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-agent"
version = "0.1.0"
description = "Minimal vertical-slice skeleton for a forecasting agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "httpx>=0.24",
]

[project.optional-dependencies]
gemini = [
  "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
